--- a/package.json
+++ b/package.json
@@ -8,6 +8,15 @@
     "dev": "parcel index.html",
     "build": "parcel build index.html --public-url /goit-js-hw-10-food-service/ --no-content-hash"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prybula-roman/goit-js-hw-11-promisification.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://github.com/prybula-roman/goit-js-hw-11-promisification#readme",
+  "dependencies": {
+    "gh-pages": "^3.2.3",
+    "parcel": "^2.0.0-rc.0"
+  }
 }
