--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "**Читать на других языках: [Русский](README.md), [Українська](README.ua.md).**",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel index.html",
-    "build": "parcel build index.html --public-url /goit-js-hw-10-food-service/ --no-content-hash"
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -17,6 +16,10 @@
   "homepage": "https://github.com/prybula-roman/goit-js-hw-11-promisification#readme",
   "dependencies": {
     "gh-pages": "^3.2.3",
-    "parcel": "^2.0.0-rc.0"
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-handlebars-precompile": "^1.0.2"
+  },
+  "bugs": {
+    "url": "https://github.com/prybula-roman/goit-js-hw-11-promisification/issues"
   }
 }
