--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "homepage": "https://github.com/prybula-roman/goit-js-hw-11-promisification#readme",
   "dependencies": {
     "gh-pages": "^3.2.3",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.1",
+    "parcel": "^2.0.0",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2"
   },
